# sorosusu-contracts

./: BUDDY_SYSTEM.md  COLLATERAL_IMPLEMENTATION.md  CREATE_NEW_PR.md  CREDIT_SCORE_ORACLE_FEED.md  Cargo.toml  EMERGENCY_WITHDRAWAL.md  EVENTS_IMPLEMENTATION.md  FINANCIAL_STATEMENT_BACKEND_GUIDE.md  FORMAL_SPEC.md  GAS_BUFFER_IMPLEMENTATION.md  GOVERNANCE_TOKEN_MINING.md  GROUP_RESILIENCE_RATING_ENGINE.md  GUARANTOR_IMPLEMENTATION.md  GUARANTOR_SUMMARY.md  HYPER_INFLATION_TESTS.md  IMPLEMENTATION_SUMMARY.md  INTER_CONTRACT_REPUTATION_API.md  LENIENCY_VOTING_IMPLEMENTATION.md  MILESTONE_IMPLEMENTATION.md  NUCLEAR_OPTION_IMPLEMENTATION.md  PATH_PAYMENT_IMPLEMENTATION.md  PR_DESCRIPTION_COMPLETE.md  QUADRATIC_VOTING_IMPLEMENTATION.md  RATE_LIMIT_IMPLEMENTATION.md  README.md  RISK_MULTIPLIER_IMPLEMENTATION.md  RISK_MULTIPLIER_SUMMARY.md  ROLLOVER_BONUS_IMPLEMENTATION.md  SHARES_IMPLEMENTATION.md  SOCIAL_VOUCHING_IMPLEMENTATION.md  SOURCE_OF_FUNDS_VERIFICATION.md  SUB_SUSU_CREDIT_LINE.md  VESTING_VAULT_LIEN_IMPLEMENTATION.md  YIELD_DELEGATION_IMPLEMENTATION.md  YIELD_PR_DESCRIPTION.md  check.txt  check_log.txt  check_out.txt  collateral_check.txt  collateral_output.txt  (+18 more)
contracts/: README.md
examples/: lending_integration.rs
src/: anchor_tests.rs  auto_rollover.rs  financial_statement.rs  financial_statement_tests.rs  gas_buffer_tests.rs  goal_escrow.rs  governance_tests.rs  group_resilience_rating_engine.rs  group_resilience_rating_engine_tests.rs  lending_market.rs  lib.rs  lib_new.rs  liquidity_buffer.rs  price_list.rs  receipt.rs  sbt_minter.rs  stealth_mode.rs  (+1 more)
(+87 files in other folders)
