[package]
name = "sorosusu-contracts"
version = "0.1.0"
edition = "2021"
description = "Core logic for the SoroSusu ROSCA protocol on Stellar"
license = "MIT"

[lib]
crate-type = ["cdylib"] # Essential for WASM compilation

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z" # Optimize for small binary size
lto = true
codegen-units = 1